// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot of breeder register 1`] = `
Array [
  <h1
    className="text-center my-5"
  >
    Breeder Register
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <label>
      Name: 
    </label>
    <input
      className="form-control my-2"
      name="username"
      onChange={[Function]}
      placeholder="name"
      type="text"
      value=""
    />
    <label>
      Password: 
    </label>
     
    <input
      className="form-control my-2"
      name="password"
      onChange={[Function]}
      placeholder="password"
      type="password"
      value=""
    />
    <label>
      Email: 
    </label>
    <input
      className="form-control my-3"
      name="reg_email"
      onChange={[Function]}
      placeholder="email"
      type="email"
      value=""
    />
    <label>
      Phone Number: 
    </label>
    <input
      className="form-control my-3"
      name="reg_phone"
      onChange={[Function]}
      placeholder="phone"
      type="text"
      value=""
    />
    <label>
      Cattery Name: 
    </label>
    <input
      className="form-control my-2"
      name="cattery_name"
      onChange={[Function]}
      placeholder="cattery name"
      type="text"
      value=""
    />
    <label>
      Organization: 
    </label>
    <input
      className="form-control my-2"
      name="organization"
      onChange={[Function]}
      placeholder="organization"
      type="text"
      value=""
    />
    <label>
      Owner Name: 
    </label>
    <input
      className="form-control my-2"
      name="owner_name"
      onChange={[Function]}
      placeholder="owner name"
      type="text"
      value=""
    />
    <label>
      City: 
    </label>
    <input
      className="form-control my-2"
      name="city"
      onChange={[Function]}
      placeholder="city"
      type="text"
      value=""
    />
    <button
      className="btn btn-success btn-block"
    >
      Submit
    </button>
  </form>,
]
`;

exports[`matches snapshot of parent register 1`] = `
Array [
  <h1
    className="text-center my-5"
  >
    Parent Register
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <label>
      Name: 
    </label>
    <input
      className="form-control my-2"
      name="username"
      onChange={[Function]}
      placeholder="name"
      type="text"
      value=""
    />
    <label>
      Password: 
    </label>
     
    <input
      className="form-control my-2"
      name="password"
      onChange={[Function]}
      placeholder="password"
      type="password"
      value=""
    />
    <label>
      Email: 
    </label>
    <input
      className="form-control my-3"
      name="reg_email"
      onChange={[Function]}
      placeholder="email"
      type="email"
      value=""
    />
    <label>
      Phone Number: 
    </label>
    <input
      className="form-control my-3"
      name="reg_phone"
      onChange={[Function]}
      placeholder="phone"
      type="text"
      value=""
    />
    <label>
      Preferred Name: 
    </label>
    <input
      className="form-control my-2"
      name="preferred_name"
      onChange={[Function]}
      placeholder="preferred name"
      type="text"
      value=""
    />
    <button
      className="btn btn-success btn-block"
    >
      Submit
    </button>
  </form>,
]
`;
